--- a/SVGgauge/index.html
+++ b/SVGgauge/index.html
@@ -43,6 +43,17 @@
 	</svg>
 	-->
 
+	<!-- multiple segment -->
+	<svg width="100px" height="100px" viewBox="0 0 42 42" class="gauge">
+	  <circle class="gauge-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
+	  <circle class="gauge-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+
+	  <circle class="gauge-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#ce4b99" stroke-width="3" stroke-dasharray="40 60" stroke-dashoffset="25"></circle>
+	  <circle class="gauge-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#b1c94e" stroke-width="3" stroke-dasharray="20 80" stroke-dashoffset="85"></circle>
+	  <circle class="gauge-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#377bbc" stroke-width="3" stroke-dasharray="30 70" stroke-dashoffset="65"></circle>
+	  <!-- unused 10% -->
+	</svg>
+
 	<script type="text/javascript" src="js/gauge.js"> </script>
 	<script> let gaugeHalf = new Gauge( 20, 35, 1500, "half", "-Half", "Beers", "#ce4b99" ); </script>
 	<button onclick = "gaugeHalf.animate();">GO Half</button>
