--- a/start.html
+++ b/start.html
@@ -7,3 +7,4 @@
 <a href="" type="button" class="blue" onClick="window.open('OldLibBased/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">OldLibBased ( Folder )</a><br/><br/>
 <a href="" type="button" class="blue" onClick="window.open('SVGgauge/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">SVGgauge</a><br/><br/>
 <a href="" type="button" class="blue" onClick="window.open('VirtualInput/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">VirtualInput</a><br/><br/>
+<a href="" type="button" class="blue" onClick="window.open('SVGRadarChart/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">SVGRadarChart</a><br/><br/>
