--- a/CameraMovement/start.html
+++ b/CameraMovement/start.html
@@ -1,32 +1,15 @@
-<!DOCTYPE html>
 <html lang="en" >
-
 <head>
-  <meta charset="UTF-8">
-  <title>Three JS Camera Movement</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+	<meta charset="UTF-8">
+	<title>Three JS Camera Movement</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
-  <div class="click">Reset Camera</div>
-<div class="webgl"></div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js'></script>
-<script src='https://threejs.org/examples/js/controls/OrbitControls.js'></script>
-<script src='https://threejs.org/examples/js/libs/tween.min.js'></script>
-
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
+	<div class="click">Reset Camera</div>
+	<div class="webgl"></div>
+	<script src='js/three.js'></script>
+	<script src='js/OrbitControls.js'></script>
+	<script src='js/tween.min.js'></script>
+	<script src="js/index.js"></script>
 </body>
-
 </html>
