--- a/OldLibBased/skydome/start.html
+++ b/OldLibBased/skydome/start.html
@@ -145,7 +145,7 @@
 
         <div id="container"></div>
 		<div id="field">
-		 	<object data="https://sport.xbe.at/plus/svg/soccer_field.svg" type="image/svg+xml" width="520" height="345"></object>
+		 	<object data="images/soccer_field.svg" type="image/svg+xml" width="520" height="345"></object>
 		 	<div id="ball"></div>
   		</div>      
   		<div id="info">
