--- a/CameraMovements/start.html
+++ b/CameraMovements/start.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 	<div id="camera-presets">
-	  <ul class="icon-camera">
-	    <li>1</li>
-	    <li>2</li>
-	    <li>3</li>
-	    <li>4</li>
-	    <li>5</li>
-	    <li>6</li>
-	  </ul>
+	  <div class="container">
+	    <div class="preset-button">1</div>
+	    <div class="preset-button">2</div>
+	    <div class="preset-button">3</div>
+	    <div class="preset-button">4</div>
+	    <div class="preset-button">5</div>
+	    <div class="preset-button">6</div>
+	  </div>
 	</div>
 	<script src="js/camera.js"></script>
 </body>
