--- a/CameraMovements/start.html
+++ b/CameraMovements/start.html
@@ -14,6 +14,7 @@
 	    <div class="preset-button">4</div>
 	    <div class="preset-button">5</div>
 	    <div class="preset-button">6</div>
+	    <div class="preset-button">F</div>
 	  </div>
 	</div>
 	<script src="js/camera.js"></script>
