--- a/CameraMovements/start.html
+++ b/CameraMovements/start.html
@@ -2,8 +2,10 @@
 <head>
 	<title>Soccer Cameras tween</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/virtualInput.css">
 	<script src="js/three.js"></script>
 	<script src="js/OrbitControls.js"></script>
+	<script src="js/VirtualInput.js"></script>
 </head>
 <body>
 	<div id="camera-presets">
