--- a/BallKick/start.html
+++ b/BallKick/start.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body bgcolor="#000">
-    <div id="display-container">
+    <div id="display-container"></div>
 	<div id="status-display">
 		<ul>
 			<li id="status-time"></li>
@@ -37,7 +37,6 @@
 			<li id="status-height"></li>
 			<li id="status-spin"></li>
 		</ul>
-	</div>
 	</div>
     <script src="js/dat.gui.min.js"></script>
     <script src="js/three.js"></script>
