--- a/BallKick/start.html
+++ b/BallKick/start.html
@@ -26,21 +26,45 @@
         right: 20px;        
       }
     </style>
+    <link rel="stylesheet" type="text/css" media="screen,print" href="css/virtualJoystick.css">
+    <script src="js/VirtualJoystick.js"></script>
   </head>
   <body bgcolor="#000">
+    <div id="joystickStatic"></div>
+    <div id="joystickDynamic"></div>    
+    <script>
+      let joystick = new Array();
+
+      joystick.push( new VirtualJoystick( {
+                container: document.getElementById( 'joystickStatic' ),
+                maxTravel: 32,
+                style: "joystick-stick",
+                static: true
+              } )
+      );
+
+      joystick.push( new VirtualJoystick( {
+                container: document.getElementById( 'joystickDynamic' ),
+                maxTravel: 3200,
+                style: "joystick-stick",
+                static: false   
+              } )
+      );
+
+    </script>
     <div id="display-container"></div>
-	<div id="status-display">
-		<ul>
-			<li id="status-time"></li>
-			<li id="status-distance"></li>
-			<li id="status-speed"></li>
-			<li id="status-height"></li>
-			<li id="status-spin"></li>
-		</ul>
-	</div>
+  	<div id="status-display">
+  		<ul>
+  			<li id="status-time"></li>
+  			<li id="status-distance"></li>
+  			<li id="status-speed"></li>
+  			<li id="status-height"></li>
+  			<li id="status-spin"></li>
+  		</ul>
+  	</div>
     <script src="js/dat.gui.min.js"></script>
     <script src="js/three.js"></script>
     <script src="js/OrbitControls.js"></script>
-    <script src="js/ball.js"></script>
+    <script src="js/ball.js"></script>    
   </body>
 </html>
