--- a/OldLibBased/soccer-specialist/start.html
+++ b/OldLibBased/soccer-specialist/start.html
@@ -5,7 +5,7 @@
         <title>SPS</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="game.css" />
+        <link rel="stylesheet" type="text/css" href="css/game.css" />
     </head>
 
     <body>
@@ -28,8 +28,8 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="cannon.min.js"></script>
-    <script type="text/javascript" src="three.min.js"></script>
-    <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="js/cannon.min.js"></script>
+    <script type="text/javascript" src="js/three.min.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
     </body>
 </html>
