--- a/start.html
+++ b/start.html
@@ -1,4 +1,5 @@
 <a href="" type="button" class="blue" onClick="window.open('CannonPhysics/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">CannonPhysics</a><br/><br/>
+<a href="" type="button" class="blue" onClick="window.open('CannonPhysics/examples/fps.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">CannonPhysics FPS (shot) </a><br/><br/>
 <a href="" type="button" class="blue" onClick="window.open('Heatmap/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">Heatmap</a><br/><br/>
 <a href="" type="button" class="blue" onClick="window.open('BallKick/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">Ball Kick</a><br/><br/>
 <a href="" type="button" class="blue" onClick="window.open('OldLibBased/soccer-specialist/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">soccer-specialist ( old lib )</a><br/><br/>
