--- a/start.html
+++ b/start.html
@@ -1,3 +1,2 @@
-<a href="" type="button" class="blue" onClick="window.open('CannonPhysicsPitch/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">CannonPhysics Pitch</a><br/><br/>
-<a href="" type="button" class="blue" onClick="window.open('CannonPhysicsGoal/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">CannonPhysics Goal </a><br/><br/>
+<a href="" type="button" class="blue" onClick="window.open('CannonPhysics/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">CannonPhysics</a><br/><br/>
 <a href="" type="button" class="blue" onClick="window.open('CannonSoccerSpecialist/start.html', '_blank', 'location=yes,height=auto,width=auto,scrollbars=yes,status=yes');">Soccer Specialist</a><br/><br/>
