--- a/CannonSoccerSpecialist Original/start.html
+++ b/CannonSoccerSpecialist Original/start.html
@@ -11,6 +11,22 @@
     <body>
     <div id="gameWrap">
     </div>
+    <div id="uiWrap">
+        <div id="tries">
+            <img class="tryIcon" id="try1" src="textures/ball.png"></img>
+            <img class="tryIcon" id="try2" src="textures/ball.png"></img>
+            <img class="tryIcon" id="try3" src="textures/ball.png"></img>
+        </div>
+        <div id="score">
+
+        </div>
+    </div>
+    <div id="popupWrap">
+        <div id="popup">
+            <p class="popupTitle">Please wait, loading...</p>
+            <progress value="0" max="1"></progress>
+        </div>
+    </div>
 
     <script type="text/javascript" src="js/cannon.min.js"></script>
     <script type="text/javascript" src="js/three.min.js"></script>
