--- a/CannonSoccerSpecialist/start.html
+++ b/CannonSoccerSpecialist/start.html
@@ -12,8 +12,10 @@
     <div id="gameWrap">
     </div>
 
-    <script type="text/javascript" src="js/cannon.min.js"></script>
-    <script type="text/javascript" src="js/three.min.js"></script>
+    <script type="text/javascript" src="js/cannon.js"></script>
+    <script type="text/javascript" src="js/three.js"></script>
+    <script type="text/javascript" src="js/OrbitControls.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
+    <script type="text/javascript" src="js/CannonDebugRenderer.js"></script>
     </body>
 </html>
